k8s/02-vehicule-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicule-service
  namespace: fleet-management
spec:
  replicas: 2 # On demande 2 instances pour la haute disponibilité
  selector:
    matchLabels:
      app: vehicule-service
  template:
    metadata:
      labels:
        app: vehicule-service
    spec:
      containers:
        - name: vehicule-service
          # Attention: sur un vrai cluster, cette image doit être sur un registre (Docker Hub, etc.)
          image: ton-nom-utilisateur/fleet-vehicule-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
