k8s/localisation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localisation-service
  namespace: fleet-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: localisation-service
  template:
    metadata:
      labels:
        app: localisation-service
    spec:
      containers:
        - name: localisation-service
          image: fleet-localisation-service:latest
          imagePullPolicy: Never   
          ports:
            - containerPort: 8083  # Port REST / GraphQL
              name: http
            - containerPort: 50051  # Port gRPC pour le streaming GPS temps réel
              name: grpc
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 5
          resources:
            # Plus de ressources car traitement de données GPS en continu
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
