k8s/vehicule-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicule-service
  namespace: fleet-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vehicule-service
  template:
    metadata:
      labels:
        app: vehicule-service
    spec:
      containers:
        - name: vehicule-service
          image: fleet-vehicule-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 5
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
