k8s/localisation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localisation-service
  namespace: fleet-management
spec:
  selector:
    app: localisation-service
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: grpc
      protocol: TCP
      port: 50051        # Port gRPC pour le streaming GPS (utilisé par les autres services)
      targetPort: 50051
  type: ClusterIP
