k8s/vehicule-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicule-service
  namespace: fleet-management
spec:
  selector:
    app: vehicule-service # Ce service redirige le trafic vers les pods ayant ce label
  ports:
    - protocol: TCP
      port: 8080        # Le port exposé par le service
      targetPort: 8080  # Le port sur lequel le conteneur écoute
  type: ClusterIP       # Accessible uniquement à l'intérieur du cluster
