k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress
  namespace: fleet-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Nécessite un Ingress Controller Nginx sur ton cluster
  rules:
    - host: api.fleet.local # L'URL que tu taperas dans ton navigateur/Postman
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service # Redirige vers le service de ta Gateway
                port:
                  number: 3000
