k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress
  namespace: fleet-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.fleet.local
      http:
        paths:
          - path: /vehicules
            pathType: Prefix
            backend:
              service:
                name: vehicule-service
                port:
                  number: 8080
          - path: /conducteurs
            pathType: Prefix
            backend:
              service:
                name: conducteur-service
                port:
                  number: 3000
          - path: /maintenance
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 8000
          - path: /evenements
            pathType: Prefix
            backend:
              service:
                name: evenement-service
                port:
                  number: 8000
          - path: /localisation
            pathType: Prefix
            backend:
              service:
                name: localisation-service
                port:
                  number: 50051
